--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,3 +1,4 @@
-<a href="/archive"><h2 class="header-link">Archive</h2></a>
-<a href="/about"><h2 class="header-link">About</h2></a>
-<a href="/atom.xml"><h2 class="header-link">RSS</h2></a>
+<a href="{{ "/about" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">whoami</h2></a>
+<a href="{{ "/archive" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">blog</h2></a>
+<a href="{{ "/pgp" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">pgp</h2></a>
+<a href="{{ "/atom.xml" | prepend: site.baseurl | replace: '//', '/' }}"><h2 class="header-link">rss</h2></a>
