chore: Update header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}">
     {% assign owner_first_name = site.owner | split: " " %}
     <!-- <h1>{{ owner_first_name[1] | downcase }}@home:~$</h1> -->
-    <h1>chalksau@home:~$</h1>
+    <h1>SaurabhChalke@home:~$</h1>
   </a>
     <div class="header-links">
       {% include links.html %}
